# Aegis-Lens

./: .env.example  .gitignore  INTEGRATION.md  LICENSE  README.md  ci-repro.sh  docker-compose.yml
.github/scripts/: env_check.sh  wait-for-it.sh
.github/workflows/: ci-emergency-override.yml  ci.yml
aegis-backend/: .dockerignore  .env.example  .golangci.yml  Dockerfile  go.mod  go.sum  main.go
aegis-backend/internal/storage/: redis.go  timescale.go
aegis-backend/migrations/: 001_sessions.sql  002_events.sql
aegis-sdk/: .dockerignore  .eslintrc.json  Dockerfile  jest.config.js  package-lock.json  package.json  rollup.config.cjs  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo
aegis-sdk/src/: api-client.ts  audio-collector.ts  chirp-generator.ts  crypto.ts  drift-detector.ts  entropy.worker.ts  frame-collector.ts  glint-detector.ts  hw-detector.ts  index.ts  lip-tracker.ts  payload-builder.ts  tof-analyzer.ts  worker-bridge.ts
aegis-sdk/src-rust/: Cargo.toml  package.json
aegis-sdk/src-rust/src/: lib.rs  stats.rs
aegis-sdk/src/__tests__/: chirp-generator.test.ts  crypto.test.ts  glint-detector.test.ts  hardware-detector.test.ts  hw-detector.test.ts  setup.ts  tof-analyzer.test.ts
aegis-sdk/src/analyzers/: tof-analyzer.ts
aegis-sdk/src/api/: api-client.ts  payload-builder.ts
aegis-sdk/src/collectors/: audio-collector.ts
aegis-sdk/src/crypto/: crypto.ts
demo/: README.md  index.html  server.js
docs/: BROWSER_COMPATIBILITY.md  HARDENING_REPORT.md
examples/: attack-simulation.ts
nginx/: nginx.conf
nginx/ssl/: .gitkeep
(+21 files in other folders)
