[package]
name = "aegis-wasm"
version = "2.0.0"
edition = "2021"
authors = ["Aegis Lens Security Team"]
license = "Proprietary"
description = "Core forensic mathematics pipeline for Aegis Lens v2.0 - Hardware-layer digital truth validation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
rand = "0.8"
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Performance",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]
